--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ pages:
   stage: deploy
   script:
     - mkdir public
-    - cp -r !(public) public
+    - find . -maxdepth 1 ! -name public ! -name '.' -exec cp -r {} public/ \;
   artifacts:
     paths:
       - public
